--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -134,7 +134,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Engine\GemCore\include\;$(SolutionDir)Engine\GemGraphics\include\;$(SolutionDir)Engine\GemNetworking\include\;$(SolutionDir)Engine\GemInput\include\;$(SolutionDir)Engine\GemWindow\include\;$(SolutionDir)Engine\ThirdParty\stb\;$(ProjectDir)GemWindow\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Engine\GemCore\include\;$(SolutionDir)Engine\GemGraphics\include\;$(SolutionDir)Engine\GemNetworking\include\;$(SolutionDir)Engine\GemInput\include\;$(SolutionDir)Engine\GemWindow\include\;$(SolutionDir)Engine\ThirdParty\stb\;$(ProjectDir)GemWindow\include\;$(ProjectDir)GemVoxel\include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
