--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -24,9 +24,10 @@
     <ClCompile Include="GemCore\src\timer.cpp" />
     <ClCompile Include="GemGraphics\src\camera.cpp" />
     <ClCompile Include="GemGraphics\src\buffer.cpp" />
+    <ClCompile Include="GemGraphics\src\shape.cpp" />
     <ClCompile Include="GemGraphics\src\vao.cpp" />
     <ClCompile Include="GemGraphics\src\shader_program.cpp" />
-    <ClCompile Include="GemGraphics\src\texture_manager.cpp" />
+    <ClCompile Include="GemGraphics\src\tex_2D_array.cpp" />
     <ClCompile Include="GemInput\src\inputs.cpp" />
     <ClCompile Include="GemInput\src\key.cpp" />
     <ClCompile Include="GemVoxel\src\chunk.cpp" />
@@ -45,9 +46,10 @@
     <ClInclude Include="GemCore\include\Gem\Core\timer.h" />
     <ClInclude Include="GemGraphics\include\Gem\Graphics\camera.h" />
     <ClInclude Include="GemGraphics\include\Gem\Graphics\buffer.h" />
+    <ClInclude Include="GemGraphics\include\Gem\Graphics\shapes\sphere.h" />
     <ClInclude Include="GemGraphics\include\Gem\Graphics\vao.h" />
     <ClInclude Include="GemGraphics\include\Gem\Graphics\shader_program.h" />
-    <ClInclude Include="GemGraphics\include\Gem\Graphics\texture_manager.h" />
+    <ClInclude Include="GemGraphics\include\Gem\Graphics\tex_2D_array.h" />
     <ClInclude Include="GemInput\include\Gem\Input\inputs.h" />
     <ClInclude Include="GemInput\include\Gem\Input\key.h" />
     <ClInclude Include="GemVoxel\include\Gem\Voxel\chunk.h" />
