camera use now a ubo to pass mat4 and added textures to the demo

--- a/InfiniteCircleDemo/InfiniteCircleDemo.vcxproj
+++ b/InfiniteCircleDemo/InfiniteCircleDemo.vcxproj
@@ -173,6 +173,9 @@
     <None Include="src\default.frag" />
     <None Include="src\default.vert" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="src\dirt.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
